<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/splashRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ocean_gradient">

    <!-- Animated ocean-wave background (same as main screen) -->
    <com.watermonitor.app.ui.views.OceanWaveView
        android:id="@+id/splashWaveView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Guideline used to position the content group ~35% from the top,
         replacing the chain-bias approach that caused AAPT2 linking errors. -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineContentTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <!-- Animated water-drop SVG -->
    <ImageView
        android:id="@+id/splashDropIcon"
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:src="@drawable/avd_water_drop_splash"
        android:contentDescription="@string/splash_drop_description"
        app:layout_constraintTop_toBottomOf="@id/guidelineContentTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- App name -->
    <TextView
        android:id="@+id/splashAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textColor="@color/accent_blue"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:layout_marginTop="20dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/splashDropIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/splashTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_tagline"
        android:textSize="15sp"
        android:textColor="@color/text_medium"
        android:fontFamily="sans-serif"
        android:layout_marginTop="6dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@id/splashAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
